fix: overflow buttons on small screens (#3227)
Make header buttons go into overflow menu as the screen shrinks

--- a/webui/react/src/pages/ModelVersionDetails/ModelVersionHeader.module.scss
+++ b/webui/react/src/pages/ModelVersionDetails/ModelVersionHeader.module.scss
@@ -36,6 +36,13 @@
       .buttons {
         display: flex;
         gap: 4px;
+
+        .buttonAction {
+          display: none;
+        }
+        .overflowAction {
+          display: block;
+        }
       }
     }
   }
@@ -55,5 +62,23 @@
     code {
       padding: 0;
     }
+  }
+}
+
+@media only screen and (min-width: $breakpoint-desktop-small) {
+  .buttonAction:nth-child(1) {
+    display: inline-block !important;
+  }
+  .overflowAction:nth-child(1) {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: $breakpoint-desktop-medium) {
+  .buttonAction:nth-child(2) {
+    display: inline-block !important;
+  }
+  .overflowAction:nth-child(2) {
+    display: none;
   }
 }
